# shrekrooms

./: .gitignore  CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: defines.cpp  defines.hpp  font.hpp  gl.cpp  gl.hpp  gl_util.cpp  gl_util.hpp  glad.c  glc.cpp  glc.hpp  grid.hpp  imports.hpp  main.cpp  managers.cpp  managers.hpp  maze.cpp  maze.hpp  player.cpp  player.hpp  rng.cpp  rng.hpp  shaders.cpp  shaders.hpp  shrek.cpp  shrek.hpp  world.cpp  world.hpp
src/shaders/: fragment.glsl
